# Tsuchinoko

./: .gitignore  CHANGELOG.md  CHANGELOG_jp.md  Cargo.toml  FizzBuzz4.rs  LICENSE  README.md  README_jp.md  named_args_test.rs  recursiveRadixSort  requirements.txt  run_regression_tests.py  simpleClass.rs  test_notin.rs  tnk.py  v1_2_numpy_simple.rs  v1_2_simple_test.rs  v1_3_all_features_test.rs  v1_5_2_for_hoisting_test.rs  v1_5_2_raise_from_test.rs  v1_5_exception_test.rs  v1_6_0_inheritance_test.rs
docs/: api-spec.md  deploy-guide.md  deploy-guide_jp.md  diagnostic_architecture.md  proposed_resident_import_process.md  pyo3_design.md  requirements.md  supported_features.md  supported_features_ja.md  supported_features_jp.md  system-design.md  unsupported_features.md  unsupported_features_ja.md  unsupported_features_jp.md  user-manual.md  user-manual_jp.md  v1.4.0_execution_plan.md  v1.4.0_pyo3_venv_verification.md  v1.4.0_requirements.md  v1.5.0_execution_plan.md  v1.5.0_requirements.md  v1.5.1_requirements.md  v1.5.2_execution_plan.md  v1.5.2_requirements.md  v1.5.2要件改善提案書.md  v1.6.0_execution_plan.md  v1.6.0_requirements.md  v1.7.0_api_spec.md  v1.7.0_execution_plan.md  v1.7.0_requirements.md  v1.7.0_system_design.md  vscode-setup.md  vscode-setup_jp.md  仕様書.md
examples/: FizzBuzz4.py  FizzBuzz5.py  bench_bubble.py  bench_radix.py  bridge_proto.rs  bubbleSort.py  bubbleSort.rs  conditionalListComp.py  fstringExample.py  lambda_test.py  list_monad_v2.py  list_monado.py  list_monado_typed.py  minimalTest.py  numpy_pandas_test.py  optionalExample.py  simpleClass.py  (+21 more)
(+191 files in other folders)
